# entroly

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  BIPT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.entroly  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MIGRATION_GUIDE.md  PRIVACY.md  PYPI_README.md  README.md  RESEARCH.md  SECURITY.md  STYLE_GUIDE.md  SUPPORT.md  SUPPORTED_VERSIONS.md  TROUBLESHOOTING.md  daemon.sh  entroly.mcpb  index.html  install.sh  llms.txt  pyproject.toml  ruff.toml  server.json  smithery.yaml
.claude-plugin/: manifest.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  model-intelligence.payload.1  model-intelligence.payload.2  model-intelligence.payload.3
.mcpb-build/: manifest.json
bench/: accuracy.py  autotune.py  belief_conditioned_bench.py  cases.json  colab_run.ipynb  compare.py  evaluate.py  fix_nb2.py  needle_heatmap.py  quality_eval.py  quality_eval_results.json  repobench_retrieval.py  results.tsv  results_gsm8k.json  swebench_forensics.py  swebench_real.py  swebench_retrieval.py  swebench_s7_engine_s6.json  tuning_config.json
benchmarks/: AGENTIC_TASKS_PREREGISTRATION.md  CONTEXTBENCH_DETERMINISM_TAX_PREREGISTRATION.md  EICV_PREREGISTRATION.md  REPRODUCE.md  VERIFIER_ABLATION_PREREGISTRATION.md  __init__.py  _falsification_common.py  agentic_task_miner.py  anchor_compress.py  audited_runner.py  cascade_frontier.py  coding_tasks.py  competitive_evidence_protocol.json  competitive_evidence_protocol_v2.json  compression_frontier.py  compression_gauntlet.py  compression_latency.py  compression_latency_protocol.json  compression_proxy_scoreboard.py  compression_public_table.py  conformal_calibrate.py  context_commit_conformance.py  context_efficiency_frontier.py  context_efficiency_openai.py  context_efficiency_report.py  context_efficiency_trial.schema.json  context_fixed_point_contract.py  contextbench_determinism_tax.py  contextbench_floor.py  contextbench_pilot.py  contextbench_span_adapter.py  diagnose_ablation_artifact.py  diagnose_anchor_survival.py  diagnose_squad_survival.py  eicv_baseline.py  eicv_endtoend.py  epr_benchmark.py  esg_falsification.py  fever_baseline.py  fever_error_analysis.py  (+50 more)
cookbook/: README.md
docs/: DETAILS.md  agentic-harness-audit.md  dashboard.js  (+51 more)
entroly/: README.md  __init__.py  __main__.py  _docker_launcher.py  adaptive_pruner.py  adversarial_calibration.py  air_gap.py  archetype_optimizer.py  atomic_decomposition.py  auditable_receipts.py  auto_index.py  autotune.py  behavioral_waste.py  belief_compiler.py  benchmark_harness.py  cache_aligner.py  cache_retention.py  cache_routing.py  causal_memory.py  ccr.py  change_listener.py  change_pipeline.py  checkpoint.py  checkpoint_relevance.py  cli.py  compression_dashboard.py  compression_mcp.py  compression_proxy.py  compression_proxy_direct.py  compression_proxy_live.py  compression_retrieval_store.py  compression_verification_loop.py  config.py  conformal_cascade.py  context_bridge.py  context_check.py  context_commit.py  context_firewall.py  context_fixed_point.py  context_sessions.py  (+90 more)
entroly-core/: Cargo.toml  README.md  model_registry.json  pyproject.toml
entroly-core/src/: anomaly.rs  bm25.rs  cache.rs  causal.rs  channel.rs  cognitive_bus.rs  cogops.rs  compliance.rs  compress.rs  context_receipts.rs  conversation_pruner.rs  dedup.rs  depgraph.rs  eicv.rs  eicv_suppressor.rs  elc_native.rs  entropy.rs  fragment.rs  guardrails.rs  health.rs  hierarchical.rs  ipc.rs  knapsack.rs  knapsack_sds.rs  learning.rs  lib.rs  lsh.rs  nkbe.rs  pollination.rs  prism.rs  proxy.rs  qccr.rs  query.rs  query_persona.rs  resonance.rs  rnr.rs  sast.rs  semantic_dedup.rs  skeleton.rs  telemetry.rs  (+2 more)
entroly-core/src/compress/: model_registry.rs
entroly-core/src/memory/: consolidation.rs  episode.rs  kanerva.rs  lsh.rs  mod.rs
entroly-core/tests/: conftest.py  test_brutal.py  test_integration.py  test_native_scripts.py
entroly-qccr/: Cargo.toml
entroly-qccr/src/: lib.rs
entroly-wasm/: Cargo.toml  index.d.ts  index.js  package.json  test_app_sdk.js  test_autotune.js  test_qccr_routing.js  test_security.js  test_startup.js  test_wasm_e2e.js
entroly-wasm/data/: tuning_defaults.json
entroly-wasm/js/: app_sdk.js  auto_index.js  autotune.js  checkpoint.js  cli.js  cogops.js  context_receipts.js  repo_map.js  server.js  skills.js  value_tracker.js  vault.js  workspace.js
entroly-wasm/src/: anomaly.rs  bm25.rs  cache.rs  causal.rs  channel.rs  cognitive_bus.rs  depgraph.rs  eicv_suppressor.rs  entropy.rs  fragment.rs  guardrails.rs  hierarchical.rs  knapsack.rs  knapsack_sds.rs  learning.rs  lib.rs  localization.rs  nkbe.rs  prism.rs  qccr.rs  query.rs  query_persona.rs  resonance.rs  rnr.rs  sast.rs  semantic_dedup.rs  skeleton.rs  trajectory.rs  utilization.rs
entroly/context_receipts/: __init__.py  dependencies.py  ingest.py  models.py  novelty.py  receipts.py  recover.py  retrieval.py  selection.py  store.py
entroly/data/: conformal_calibration.json
entroly/entroly/: adaptive_pruner.py  checkpoint.py  config.py  multimodal.py  prefetch.py  provenance.py  query_refiner.py  server.py
entroly/integrations/: __init__.py  discord_gateway.py  ebbiforge.py  event_delivery.py  hermes.py  langchain.py  slack_gateway.py  telegram_gateway.py
entroly/integrations/hermes_context_engine/: __init__.py  engine.py  plugin.yaml
entroly/models/: __init__.py  __main__.py  registry.json  registry.py  schema.json
entroly/npm/: README.md  index.js  package.json
entroly/npm-alias/: README.md  index.d.ts  index.js  package.json
entroly/ravs/: __init__.py  capture.py  compiler.py  ece.py  epr.py  executors.py  outcome_bridge.py  router.py  shadow.py  spectral.py  world_model.py
entroly/ravs/collectors/: retry.py
entroly/tests/: test_deep_functional.py  test_e2e.py  test_functional.py  test_intensive_functional.py  test_real_user.py
entroly/verifiers/: __init__.py  cache.py  cli.py  lang_js.py  local_nli.py  ngram_model.py  provenance_tracer.py  scope_analyzer.py  stave.py  symbol_resolution.py
(+639 files in other folders)
