[build-system]
requires = ["hatchling>=1.27,<1.31"]
build-backend = "hatchling.build"

[project]
name = "entroly"
version = "1.0.49"
description = "Local context OS for AI coding agents: token optimization, MCP tools, receipts, exact recovery, verification, and SDK helpers."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
logo = { file = "docs/assets/logo.png", content-type = "image/png" }
requires-python = ">=3.10"
authors = [
    { name = "entroly", email = "fastrunner10090@gmail.com" },
]
keywords = [
    "context-receipts", "context-control-plane", "local-context-os", "token-saving", "context-compression", "reduce-llm-costs", "llm-proxy",
    "mcp", "agentic-ai", "cursor", "claude-code", "copilot", "llm",
    "knapsack", "entropy", "context-optimization", "token-reduction", "hallucination-detection"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.6.0,<2",
]

[project.optional-dependencies]
proxy = [
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
]
native = [
    "entroly-core>=1.0.49,<2",
]
receipt-proof = [
    "cryptography>=42",
]
full = [
    "cryptography>=42",
    "entroly-core>=1.0.49,<2",
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
]
test = [
    "pytest>=8,<9",
]

[project.scripts]
entroly = "entroly._docker_launcher:launch"
entroly-memory = "entroly.memory_cli:main"
entroly-compression-mcp = "entroly.compression_mcp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
