[build-system]
requires = ["hatchling>=1.27,<1.32"]
build-backend = "hatchling.build"

[project]
name = "entroly"
version = "1.0.63"
description = "Open-source Context OS for AI agents: auditable context engineering, compression, recovery, receipts, and verification."
readme = "PYPI_README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
logo = { file = "docs/assets/logo.png", content-type = "image/png" }
requires-python = ">=3.10"
authors = [
    { name = "entroly", email = "fastrunner10090@gmail.com" },
]
keywords = [
    "ai-agents", "ai-coding-agents", "context-engineering", "context-management", "context-optimization", "context-compression",
    "prompt-compression", "token-optimization", "context-window", "context-receipts", "context-control-plane", "llm-proxy",
    "mcp", "mcp-server", "model-context-protocol", "github-copilot", "cursor", "claude-code", "codex", "openclaw",
    "hallucination-detection", "agent-memory", "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.6.0,<2",
]

[project.urls]
Homepage = "https://juyterman1000.github.io/entroly/docs/index.html"
Documentation = "https://juyterman1000.github.io/entroly/docs/index.html"
Source = "https://github.com/juyterman1000/entroly"
Issues = "https://github.com/juyterman1000/entroly/issues"
"Release Notes" = "https://github.com/juyterman1000/entroly/releases"

[project.optional-dependencies]
proxy = [
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
]
native = [
    "entroly-core>=1.0.63,<2",
]
receipt-proof = [
    "cryptography>=42",
]
full = [
    "cryptography>=42",
    "entroly-core>=1.0.63,<2",
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
]
test = [
    "pytest>=8,<9",
]
benchmark = [
    "tiktoken>=0.9,<0.10",
]
neural = [
    "sentence-transformers>=5.1,<6",
]
neural-benchmark = [
    "datasets>=4,<5",
    "sentence-transformers>=5.1,<6",
]

[project.scripts]
entroly = "entroly._docker_launcher:launch"
entroly-memory = "entroly.memory_cli:main"
entroly-compression-mcp = "entroly.compression_mcp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
