[package]
name = "entroly-core"
version = "1.0.62"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/juyterman1000/entroly"
description = "Rust core for Entroly: Context Receipts, deterministic ingestion/ranking, dependency audits, and local context optimization"

[lib]
name = "entroly_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]
proxy = ["dep:tiny_http", "dep:ureq"]

[dependencies]
pyo3 = { version = "0.25", features = ["abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
entroly-qccr = { path = "../entroly-qccr", default-features = false, features = ["regex-full"] }
md-5 = "0.11"
sha2 = "0.10"
flate2 = "1.0"
rayon = "1.12"
rand = "0.10"
tiny_http = { version = "0.12", optional = true }
ureq = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3.12"
