[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "entroly-core"
version = "1.0.64"
description = "Rust core for Entroly context engineering: deterministic selection, recoverable compression, Context Receipts, and verification"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
authors = [
    { name = "entroly", email = "fastrunner10090@gmail.com" },
]
keywords = ["ai-agents", "context-engineering", "context-compression", "context-receipts", "context-control-plane", "context-optimization", "mcp", "knapsack", "entropy", "rust", "pyo3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://juyterman1000.github.io/entroly/docs/index.html"
Documentation = "https://juyterman1000.github.io/entroly/docs/index.html"
Source = "https://github.com/juyterman1000/entroly"
Issues = "https://github.com/juyterman1000/entroly/issues"
"Release Notes" = "https://github.com/juyterman1000/entroly/releases"

[tool.maturin]
features = ["extension-module"]
