[package]
name = "entroly-wasm"
version = "1.0.23"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/juyterman1000/entroly"
description = "WebAssembly build of Entroly — cut Claude / OpenAI / Gemini bills 70%+ from JavaScript / TypeScript with no Python dependency"

[lib]
name = "entroly_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
# JS/Wasm bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Lightweight regex (qccr SSOT). regex-lite is the regex author's dependency-
# free, much smaller engine — keeps the WASM bundle lean while sharing the same
# ranking logic as the PyO3 build (which uses full `regex`).
regex-lite = "0.1"

# Hashing
md-5 = "0.10"

# Compression (checkpoint)
flate2 = "1.0"
