[package]
name = "entroly-wasm"
version = "1.0.46"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/juyterman1000/entroly"
description = "WebAssembly build of Entroly — cut Claude / OpenAI / Gemini bills 70%+ from JavaScript / TypeScript with no Python dependency"

[lib]
name = "entroly_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
# JS/Wasm bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# QCCR retrieval single source of truth — the exact same crate the PyO3 build
# uses, here with the dependency-free `regex-lite` backend to keep the WASM
# bundle lean. Shared code => npm and pip/MCP/SDK cannot drift.
entroly-qccr = { path = "../entroly-qccr", default-features = false, features = ["regex-lite"] }

# Hashing
md-5 = "0.10"

# Compression (checkpoint)
flate2 = "1.0"