[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entroly"
version = "1.0.22"

description = "Information-theoretic context optimization with deterministic hallucination detection and suppression. MCP server, HTTP proxy, and Python SDK for AI coding agents."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "entroly", email = "fastrunner10090@gmail.com" },
]
keywords = [
    "mcp", "context-optimization", "token-cost", "agentic-ai",
    "knapsack", "entropy", "deduplication", "checkpoint",
    "cursor", "claude", "copilot", "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Docker is the only hard requirement — the Rust engine lives inside the image.
    # For native/fallback mode (ENTROLY_NO_DOCKER=1), also install entroly-core.
]

[project.optional-dependencies]
native = [
    "entroly-core>=1.0.22,<2",
    "mcp>=1.0.0,<2",
]

[project.urls]
Homepage = "https://github.com/juyterman1000/entroly"
Documentation = "https://github.com/juyterman1000/entroly#readme"
Repository = "https://github.com/juyterman1000/entroly"
"Bug Tracker" = "https://github.com/juyterman1000/entroly/issues"

[project.scripts]
entroly = "entroly._docker_launcher:launch"

[tool.hatch.build.targets.wheel]
packages = ["entroly"]
