[build-system]
requires = ["hatchling>=1.27,<1.31"]
build-backend = "hatchling.build"

[project]
name = "entroly"
version = "1.0.58"

description = "Local context OS for AI coding agents: token optimization, MCP tools, receipts, exact recovery, verification, HTTP proxy, and Python SDK."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "entroly", email = "fastrunner10090@gmail.com" },
]
keywords = [
    "mcp", "context-optimization", "token-cost", "local-context-os", "agentic-ai",
    "knapsack", "entropy", "deduplication", "checkpoint",
    "cursor", "claude-code", "copilot", "llm", "hallucination-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.6.0,<2",
]

[project.optional-dependencies]
proxy = [
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
]
native = [
    "entroly-core>=1.0.58,<2",
]
receipt-proof = [
    "cryptography>=42",
]
full = [
    "cryptography>=42",
    "entroly-core>=1.0.58,<2",
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
]
test = [
    "pytest>=8,<9",
]

[project.urls]
Homepage = "https://github.com/juyterman1000/entroly"
Documentation = "https://github.com/juyterman1000/entroly#readme"
Repository = "https://github.com/juyterman1000/entroly"
"Bug Tracker" = "https://github.com/juyterman1000/entroly/issues"

[project.scripts]
entroly = "entroly._docker_launcher:launch"
entroly-memory = "entroly.memory_cli:main"
entroly-compression-mcp = "entroly.compression_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["entroly"]
